--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,29 +1,85 @@
-h1 {
-	text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Varela&display=swap');
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-li {
-	margin-left: auto;
-	margin-right: auto;
-	background-color: rgba(116, 0, 134, 0.644);
-	color: #fff;
-	margin-bottom: 10px;
-	padding: 10px;
-	cursor: pointer;
-	max-width: 300px;
+body {
+	font-family: 'Varela', sans-serif;
+	height: 100vh;
+	background: linear-gradient(rgba(0, 0, 0, 0.2)),
+		url('/image/istockphoto-1435226078-612x612.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
 }
 
-button {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	background-color: rgb(61, 70, 240);
-	color: #fff;
-	padding: 5px 10px;
-	cursor: pointer;
+.wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: inherit;
+}
+
+.hidden {
+	display: none;
+}
+
+.btn {
 	border: 0;
+	background: transparent;
+	font-family: inherit;
+	font-size: 20px;
+	color: #fff;
+	cursor: pointer;
 }
 
-button:hover {
-	opacity: 0.9;
+.show-btn {
+	background-color: #474b4f;
+	padding: 8px 12px;
+	border-radius: 8px;
+	transition: background 0.5s;
+}
+.show-btn:hover {
+	background-color: #3a3d40;
+}
+
+.modal {
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	max-width: 600px;
+	width: 100%;
+	background-color: #f4f4f4;
+	padding: 15px;
+	border-radius: 8px;
+	transform: translate(-50%, -50%);
+	z-index: 100;
+}
+
+.modal-header {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 20px;
+}
+
+.close-btn {
+	color: #222;
+	font-size: 20px;
+}
+
+.modal-title {
+	margin-bottom: 15px;
+}
+
+.overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	backdrop-filter: blur(5px);
 }
