--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,85 +1,67 @@
-@import url('https://fonts.googleapis.com/css2?family=Varela&display=swap');
-
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
+@import url(https://fonts.googleapis.com/css2?family=Varela&display=swap);
 
 body {
 	font-family: 'Varela', sans-serif;
-	height: 100vh;
-	background: linear-gradient(rgba(0, 0, 0, 0.2)),
-		url('/image/istockphoto-1435226078-612x612.jpg');
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
+	background-color: #4158d4;
+	background-image: linear-gradient(
+		43deg,
+		#4158d4 0%,
+		#c850c0 46%,
+		#ffcc70 100%
+	);
+	flex-direction: column;
+	gap: 50px;
+	color: #fff;
 }
 
-.wrapper {
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+body {
 	display: flex;
+	height: 100vh;
 	justify-content: center;
 	align-items: center;
-	height: inherit;
 }
 
-.hidden {
-	display: none;
+h1 {
+	font-size: 50px;
 }
 
-.btn {
-	border: 0;
-	background: transparent;
-	font-family: inherit;
-	font-size: 20px;
-	color: #fff;
-	cursor: pointer;
-}
-
-.show-btn {
-	background-color: #474b4f;
-	padding: 8px 12px;
-	border-radius: 8px;
-	transition: background 0.5s;
-}
-.show-btn:hover {
-	background-color: #3a3d40;
-}
-
-.modal {
-	position: fixed;
-	left: 50%;
-	top: 50%;
-	max-width: 600px;
-	width: 100%;
-	background-color: #f4f4f4;
-	padding: 15px;
-	border-radius: 8px;
-	transform: translate(-50%, -50%);
-	z-index: 100;
-}
-
-.modal-header {
+form {
 	display: flex;
-	justify-content: space-between;
-	margin-bottom: 20px;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
 }
 
-.close-btn {
-	color: #222;
+input {
+	font-size: 25px;
+	padding: 5px 8px;
+	border: 0;
+	font-family: inherit;
+}
+
+input:focus {
+	outline: none;
+}
+
+button {
 	font-size: 20px;
+	background-color: rgba(73, 73, 255);
+	color: #fff;
+	padding: 8px 12px;
+	border: 0;
+	border-radius: 8px;
+	font-family: inherit;
+	cursor: pointer;
+	transition: background 0.3s;
 }
 
-.modal-title {
-	margin-bottom: 15px;
-}
-
-.overlay {
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
-	backdrop-filter: blur(5px);
+button:hover {
+	background-color: rgba(21, 21, 217);
 }
