--- a/CSS/index.css
+++ b/CSS/index.css
@@ -65,3 +65,13 @@ button {
 button:hover {
 	background-color: rgba(21, 21, 217);
 }
+
+.success {
+	border: 5px solid greenyellow;
+	box-shadow: 3px 4px 29px 3px rgba(0, 255, 8, 0.71);
+}
+
+.error {
+	border: 5px solid tomato;
+	box-shadow: 3px 4px 29px 3px rgba(255, 0, 0, 0.71);
+}
