--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,38 +1,53 @@
-@import url(https://fonts.googleapis.com/css2?family=Muli:wght@100;200;300;400;500;600;800;900&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;800;900&display=swap);
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	color: #fff;
+}
 
 body {
-	background-color: #e1e1e1;
-	font-family: 'Muli', sans-serif;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
 	height: 100vh;
-	overflow: hidden;
-	margin: 0;
-}
-
-.key {
-	border: 1px solid #999;
-	background-color: #eee;
-	box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-	display: inline-flex;
-	align-items: center;
-	font-size: 20px;
-	font-weight: bold;
-	padding: 20px;
+	display: flex;
 	flex-direction: column;
-	margin: 10px;
-	min-width: 150px;
-	position: relative;
+	justify-content: center;
+	align-items: center;
+	font-family: 'Montserrat', sans-serif;
+	text-align: center;
+	background: linear-gradient(43deg, #413f81 0%, #c850c0 46%, #ffcc70 100%);
 }
 
-.key small {
+.container {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+	background-color: rgba(204, 204, 204, 0.5);
+	padding: 15px 25px;
+	border-radius: 10px;
+	user-select: none;
+	cursor: pointer;
+	font-weight: 500;
+	transition: all 0.5s;
+	margin-bottom: 25px;
+}
+
+.container:hover {
+	box-shadow: 0px 26px 70px 1px rgba(0, 0, 0, 0.4);
+	transform: scale(1.001);
+}
+
+.container h1 {
+	font-weight: 500;
+}
+
+.copyright {
 	position: absolute;
-	top: -24px;
-	left: 0;
-	text-align: center;
-	width: 100%;
-	color: #555;
-	font-size: 14px;
+	bottom: 50px;
+}
+
+@media screen (max-width: 460px) {
+	.container h1 {
+		font-size: 22px;
+	}
 }
